classDiagram
    class Produkt {
        <<abstract>>
        -String name
        -double price
        -int quantity
        -double taxRate
        +Produkt(name: String, price: double, quantity: int, taxRate: double)
        +getName() String
        +getPrice() double
        +getQuantity() int
        +setQuantity(quantity: int) void
        +getTaxRate() double
        +getTaxAmount() double
        +getType()* String
        +toString() String
    }

    class Drink {
        +Drink(name: String, price: double, quantity: int)
        +getType() String
    }

    class Snack {
        +Snack(name: String, price: double, quantity: int)
        +getType() String
    }

    class Pocketbok {
        +Pocketbok(name: String, price: double, quantity: int)
        +getType() String
    }

    class vendingMachineGUI {
        -static final int SCREEN_WIDTH
        -static final int SCREEN_HEIGHT
        -JPanel mainpanel
        -JButton[] productbuttons
        -JButton adminbutton
        -VMLogik logic
        -String csvfilepath
        +vendingMachineGUI()
        -initComponents() void
        -loadInitialProducts() void
        -restockFromCsv() void
        -layoutComponents() void
        -updateProductButtons() void
        -buyProduct(index: int) void
        -showAdminPanel() void
        +main(args: String[]) void
    }

    class VMLogik {
        -List~Produkt~ products
        -String csvfilepath
        +VMLogik()
        +setCsvFilePath(path: String) void
        +addProdukt(product: Produkt) void
        +getProducts() List~Produkt~
        +buyProduct(index: int) Produkt
        -logPurchase(product: Produkt) void
    }

    class filehandler {
        -static final String SAVE_FILE
        -static final String LOG_FILE
        +saveState(logic: VMLogik) void
        +loadState() VMLogik
        +loadProductsFromCSV(filename: String) List~Produkt~
        -extractQuantity(productName: String) int
        -cleanProductName(productName: String) String
        +logPurchase(product: Produkt) void
    }

    Produkt <|-- Drink
    Produkt <|-- Snack
    Produkt <|-- Pocketbok
    vendingMachineGUI --> VMLogik
    VMLogik --> Produkt
    VMLogik --> filehandler
    filehandler ..> VMLogik
    vendingMachineGUI ..> filehandler